# cengine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
checks/: pext_support.cpp  popcount_support.cpp
src/: Makefile  bitboard.cpp  bitboard.hpp  evaluation.cpp  evaluation.hpp  importer.hpp  io.hpp  main.cpp  misc.hpp  move.hpp  position.cpp  position.hpp  search.cpp  search.hpp  stackvector.hpp  thread_pool.cpp  thread_pool.hpp  thread_pool_test.cpp  types.hpp  xoshiro.hpp
